# dgraphio-grpc

./: .editorconfig  .gitignore  .gitmodules  CHANGELOG.md  LICENSE  Makefile  README.md  dgraphio-grpc.cabal  shell.nix
src/exe/: Main.hs
src/lib/: Api.hs  Lib.hs
